@@ -77,7 +77,7 @@ public class LOVConnector implements DatasetCatalogConnector {
 
 		logger.debug("Search URL = {}", searchURL);
 
-		try (CloseableHttpClient httpClient = HttpClientBuilder.create().build()) {
+		try (CloseableHttpClient httpClient = HttpClientBuilder.create().useSystemProperties().build()) {
 			try (CloseableHttpResponse response = httpClient.execute(new HttpGet(searchURL))) {
 				StatusLine statusLine = response.getStatusLine();
 				if ((statusLine.getStatusCode() / 200) != 1) {
@@ -146,7 +146,7 @@ public class LOVConnector implements DatasetCatalogConnector {
 
 		logger.debug("Info URL = {}", infoURL);
 
-		try (CloseableHttpClient httpClient = HttpClientBuilder.create().build()) {
+		try (CloseableHttpClient httpClient = HttpClientBuilder.create().useSystemProperties().build()) {
 			try (CloseableHttpResponse response = httpClient.execute(new HttpGet(infoURL))) {
 				StatusLine statusLine = response.getStatusLine();
 				if ((statusLine.getStatusCode() / 200) != 1) {
