@@ -3,6 +3,8 @@ date: xx/xx/202x
   * improved the performance of the history paging service
   * fixed a NullPointerException thrown when clicking "Export as..." in the alignment validation tool
   * added icelandic to system languages
+  * take system properties into account (e.g. proxy settings) when using the default HTTPClientBuilder in Apache
+    HTTPComponents
   
 version 8.0
 date: 29/07/2020
